--- a/src/app/wizard/wizard.component.html
+++ b/src/app/wizard/wizard.component.html
@@ -1,7 +1,5 @@
-<button mat-raised-button (click)="isLinear = !isLinear" id="toggle-linear">
-    {{!isLinear ? 'Enable linear mode' : 'Disable linear mode'}}
-  </button>
   <mat-horizontal-stepper [linear]="isLinear" #stepper>
+
     <mat-step [stepControl]="firstFormGroup">
       <form [formGroup]="firstFormGroup">
         <ng-template matStepLabel>Fill out your name</ng-template>
@@ -13,6 +11,7 @@
         </div>
       </form>
     </mat-step>
+
     <mat-step [stepControl]="secondFormGroup">
       <form [formGroup]="secondFormGroup">
         <ng-template matStepLabel>Fill out your address</ng-template>
@@ -25,12 +24,14 @@
         </div>
       </form>
     </mat-step>
+
     <mat-step>
       <ng-template matStepLabel>Done</ng-template>
       You are now done.
       <div>
         <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.reset()">Reset</button>
+        <button mat-button (click)="uploadData()">Done</button>
       </div>
     </mat-step>
+
   </mat-horizontal-stepper>
