--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 
+<div class="row">
+  <div class="container">
 
+    <app-wizard></app-wizard>
+  </div>
+</div>
 
-  <app-wizard></app-wizard>
 
 
 
