first page done

--- a/src/app/wizard/wizard.component.html
+++ b/src/app/wizard/wizard.component.html
@@ -33,10 +33,7 @@
                         In the following steps, I'll give you a practicle use case on regular customer need, and you need to enter a response for that in <b> Sinhala</b>.</p>
                     </div>
 
-                    <div class="chatbubble" style="border-radius: 10px!important;">
-                      <p>
-                      In the given example for a scenario where customer asked for a details about a show room.</p>
-                    </div>
+
                   <div>
 
                     </div>
@@ -44,6 +41,12 @@
                   <div class="col-lg-6 col-md-6 col-xs-12">
                     <mat-card class="bottomparent" style="padding: 10px;">  
                       <mat-card-title>Example</mat-card-title>  
+
+                      <div class="chatbubble" style="border-radius: 10px!important;">
+                        <p>
+                        In the given example for a scenario where customer asked for a details about a show room.</p>
+                      </div>
+
                       <div class=" container-fluid alignbottom">
                         <div class="row" style="margin-bottom: 15px;">
                           
@@ -60,10 +63,20 @@
                           </div>
                         </div>
 
-                        <div class="row" style="margin-bottom:15px;padding:0 10px;">
+                        <div class="row" style="margin-bottom:3px;padding:0 10px;">
                           <mat-form-field class="full-width">
                             <textarea matInput class="msgbox" rows="5"></textarea>
                           </mat-form-field>
+
+                          
+                        </div>
+                        <div class="row" style="margin-bottom: 15px;">
+                          <div class="col-md-12">
+                            <button mat-icon-button class="right">
+                              <img src="../../assets/img/sendicon.png" style="max-width: 70%;" alt="">
+                            </button>
+                            
+                          </div>
                         </div>
                       </div>                 
 
@@ -73,7 +86,7 @@
               </mat-card-content>
             </mat-card>
             <div>
-              <button mat-raised-button color="primary"  matStepperNext>Next</button>
+              <button mat-raised-button color="primary" class="nxtbtn"  matStepperNext>Understood</button>
             </div>
         </div>
 
