--- a/src/app/wizard/wizard.component.css
+++ b/src/app/wizard/wizard.component.css
@@ -1,4 +1,4 @@
-button{
+.nxtbtn{
     border-radius: 50px;
     padding: 0 50px;
     margin: 10px;
@@ -9,6 +9,12 @@ button{
     float: right;
     background: #0077cc!important;
     color: #fff!important;
+}
+
+.sendbtn{
+    float: right;
+    background: #0077cc!important;
+    color: #fff!important;  
 }
 
 .chatbubble{
