--- a/src/app/wizard/wizard.component.css
+++ b/src/app/wizard/wizard.component.css
@@ -10,7 +10,7 @@ textarea{
 }
 
 .right{
-    float: right;
+    float: right!important;
     background: #0077cc!important;
     color: #fff!important;
 }
@@ -21,6 +21,10 @@ textarea{
     color: #fff!important;  
 }
 
+:host ::ng-deep .mat-horizontal-content-container {
+    padding:0 !important;
+}
+
 .chatbubble{
     padding: 8px 15px;
     background: #e0e0e0;
@@ -29,6 +33,7 @@ textarea{
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     color: #000;
     margin-bottom: 10px;
+    float: left;
 }
 
 .full-width {
@@ -44,6 +49,18 @@ textarea{
     position: absolute;
     bottom: 0;
     left: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+    .alignbottom{
+        position: relative!important;
+    }
+}
+
+@media only screen and (max-width: 624px){
+    .chatbubble{
+        border-radius: 10px!important;
+    }
 }
 
 .bottomparent{
